force-app/main/default/objects/TDC_EC__Email_History__c/TDC_EC__Email_History__c.object-meta.xml
<CustomObject>
    <description>This object will hold the email history information</description>
    <label>Email History</label>
    <nameField>
        <label>Email History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>