force-app/main/default/objects/TDC_EC__Email_History__c/fields/TDC_EC__Bcc_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>TDC_EC__Bcc_Email_Address__c</fullName>
    <description>This field is used to store the bcc email address</description>
    <label>Bcc Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>