force-app/main/default/objects/TDC_EC__Email_History__c/fields/TDC_EC__Campaign__c.field-meta.xml
<CustomField>
    <fullName>TDC_EC__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Email History</relationshipLabel>
    <relationshipName>Email_History</relationshipName>
    <type>Lookup</type>
</CustomField>