force-app/main/default/objects/TDC_EC__Email_History__c/fields/TDC_EC__Contact__c.field-meta.xml
<CustomField>
    <fullName>TDC_EC__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to store the related object of the email.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Email History</relationshipLabel>
    <relationshipName>Email_History</relationshipName>
    <type>Lookup</type>
</CustomField>