force-app/main/default/objects/TDC_EC__Email_History__c/fields/TDC_EC__Delivery__c.field-meta.xml
<CustomField>
    <fullName>TDC_EC__Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to store the Delivery status of the Email.</description>
    <label>Delivery</label>
    <type>Checkbox</type>
</CustomField>