force-app/main/default/objects/TDC_EC__Email_History__c/fields/TDC_EC__Email_Bounce_Reason__c.field-meta.xml
<CustomField>
    <fullName>TDC_EC__Email_Bounce_Reason__c</fullName>
    <description>This field is used to store the bounce reason of email.</description>
    <label>Email Bounce Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>