force-app/main/default/objects/TDC_EC__Email_History__c/fields/TDC_EC__Email_Click_Count__c.field-meta.xml
<CustomField>
    <fullName>TDC_EC__Email_Click_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field is used to store the total count of URL click of the email.</description>
    <label>Email Click Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>