force-app/main/default/objects/TDC_EC__Email_History__c/fields/TDC_EC__Email_Open_Count__c.field-meta.xml
<CustomField>
    <fullName>TDC_EC__Email_Open_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field is used to store the total email open count.</description>
    <label>Email Open Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>