force-app/main/default/objects/TDC_EC__Email_History__c/fields/TDC_EC__Group_Resubscribe__c.field-meta.xml
<CustomField>
    <fullName>TDC_EC__Group_Resubscribe__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to store the group resubscribe of the email.</description>
    <label>Group Resubscribe</label>
    <type>Checkbox</type>
</CustomField>