force-app/main/default/objects/TDC_EC__Email_History__c/fields/TDC_EC__Group_Unsubscribe__c.field-meta.xml
<CustomField>
    <fullName>TDC_EC__Group_Unsubscribe__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to store the group subscribe of the email.</description>
    <label>Group Unsubscribe</label>
    <type>Checkbox</type>
</CustomField>