force-app/main/default/objects/TDC_EC__Email_History__c/fields/TDC_EC__Lead__c.field-meta.xml
<CustomField>
    <fullName>TDC_EC__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to store the related object of the email.</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Email History</relationshipLabel>
    <relationshipName>Email_History</relationshipName>
    <type>Lookup</type>
</CustomField>