force-app/main/default/objects/TDC_EC__Email_History__c/fields/TDC_EC__Message__c.field-meta.xml
<CustomField>
    <fullName>TDC_EC__Message__c</fullName>
    <description>This field is used to store the message body for the email.</description>
    <label>Message</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>