force-app/main/default/objects/TDC_EC__Email_History__c/fields/TDC_EC__Message_Id__c.field-meta.xml
<CustomField>
    <fullName>TDC_EC__Message_Id__c</fullName>
    <description>This field is used to store the id return from the provider.</description>
    <label>Message Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>