force-app/main/default/objects/TDC_EC__Email_History__c/fields/TDC_EC__Numbers_Of_Files__c.field-meta.xml
<CustomField>
    <fullName>TDC_EC__Numbers_Of_Files__c</fullName>
    <description>This field is used to store the numbers of files used in the email.</description>
    <label>Numbers Of Files</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>