force-app/main/default/objects/TDC_EC__Email_History__c/fields/TDC_EC__Related_Object__c.field-meta.xml
<CustomField>
    <fullName>TDC_EC__Related_Object__c</fullName>
    <description>This field is used to store the related object name of the email.</description>
    <label>Related Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>