force-app/main/default/objects/TDC_EC__Email_History__c/fields/TDC_EC__Related_Object_id__c.field-meta.xml
<CustomField>
    <fullName>TDC_EC__Related_Object_id__c</fullName>
    <description>This field is used to store the related object id of the email.</description>
    <label>Related Object id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>