force-app/main/default/objects/TDC_EC__Email_History__c/fields/TDC_EC__Reply_To_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>TDC_EC__Reply_To_Email_Address__c</fullName>
    <description>This field is used to store the reply to address&apos;s value of the email.</description>
    <label>Reply To Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>