force-app/main/default/objects/TDC_EC__Email_History__c/fields/TDC_EC__Sender_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>TDC_EC__Sender_Email_Address__c</fullName>
    <description>It holds sender Email address</description>
    <label>Sender Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>