force-app/main/default/objects/TDC_EC__Email_History__c/fields/TDC_EC__Status__c.field-meta.xml
<CustomField>
    <fullName>TDC_EC__Status__c</fullName>
    <description>This field is used to store the status report of the email.</description>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>