force-app/main/default/objects/TDC_EC__Email_History__c/fields/TDC_EC__Template_Id__c.field-meta.xml
<CustomField>
    <fullName>TDC_EC__Template_Id__c</fullName>
    <description>Holds information of template id used in mail</description>
    <label>Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>