force-app/main/default/objects/TDC_EC__Email_History__c/fields/TDC_EC__To_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>TDC_EC__To_Email_Address__c</fullName>
    <description>It holds the information of all to email addresses</description>
    <label>To Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>