force-app/main/default/objects/TDC_EC__Email_History__c/fields/TDC_EC__Total_Deferred_Attempt__c.field-meta.xml
<CustomField>
    <fullName>TDC_EC__Total_Deferred_Attempt__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field is used to store the deferred attempt count report of the email.</description>
    <label>Total Deferred Attempt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>