force-app/main/default/objects/TDC_EC__Email_History__c/fields/TDC_EC__Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>TDC_EC__Unique_Id__c</fullName>
    <description>This field is used to store the unique Id for the email.</description>
    <label>Unique Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>